[package]
name = "input-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "input-forwarder"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver-tester"
path = "src/bin/receiver.rs"

[dependencies]
inputbot = { git = "https://github.com/virtual-puppet-project/InputBot.git", rev = "bcda453487e686b2e2621978650454d2b6842af3" }
tungstenite = "0.17"
url = "2.1"
crossbeam-channel = "0.5"
gdnative = "0.11"
